{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 65,
  "lineage": "c68a13b7-762c-2410-0615-9e0e5a5023c8",
  "resources": [
    {
      "module": "module.includes.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021770407384:security-group/sg-012580b2db6834e10",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-012580b2db6834e10",
            "ingress": [],
            "name": "snyk-demo-eks-2ec99KG620230216172618276100000009",
            "name_prefix": "snyk-demo-eks-2ec99KG6",
            "owner_id": "021770407384",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "snyk-demo-eks-2ec99KG6-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "snyk-demo-eks-2ec99KG6-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5c7132a72c81218"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.includes.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021770407384:security-group/sg-00cf435422594d503",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-00cf435422594d503",
            "ingress": [],
            "name": "snyk-demo-eks-2ec99KG62023021617261931450000000a",
            "name_prefix": "snyk-demo-eks-2ec99KG6",
            "owner_id": "021770407384",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "snyk-demo-eks-2ec99KG6-eks_worker_sg",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "owned"
            },
            "tags_all": {
              "Name": "snyk-demo-eks-2ec99KG6-eks_worker_sg",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5c7132a72c81218"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.includes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-2741846529",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-012580b2db6834e10",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.eks.aws_security_group.cluster",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.includes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-762493765",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-012580b2db6834e10",
            "self": false,
            "source_security_group_id": "sg-00cf435422594d503",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.eks.aws_security_group.cluster",
            "module.includes.module.eks.aws_security_group.workers",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.includes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-964685434",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00cf435422594d503",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.eks.aws_security_group.workers",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.includes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-2200887996",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00cf435422594d503",
            "self": false,
            "source_security_group_id": "sg-012580b2db6834e10",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.eks.aws_security_group.cluster",
            "module.includes.module.eks.aws_security_group.workers",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.includes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-4236981184",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00cf435422594d503",
            "self": false,
            "source_security_group_id": "sg-012580b2db6834e10",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.eks.aws_security_group.cluster",
            "module.includes.module.eks.aws_security_group.workers",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.includes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-2673314557",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00cf435422594d503",
            "self": false,
            "source_security_group_id": "sg-00cf435422594d503",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.eks.aws_security_group.workers",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.includes.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091829c47fa75f30e",
            "domain": "vpc",
            "id": "eipalloc-091829c47fa75f30e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-200-146-2.compute-1.amazonaws.com",
            "public_ip": "52.200.146.2",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "snyk-demo-vpc-us-east-1a",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "shared"
            },
            "tags_all": {
              "Name": "snyk-demo-vpc-us-east-1a",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.includes.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021770407384:internet-gateway/igw-0f46eb68e17887538",
            "id": "igw-0f46eb68e17887538",
            "owner_id": "021770407384",
            "tags": {
              "Name": "snyk-demo-vpc",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "shared"
            },
            "tags_all": {
              "Name": "snyk-demo-vpc",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "shared"
            },
            "vpc_id": "vpc-0e5c7132a72c81218"
          },
          "dependencies": [
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.includes.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091829c47fa75f30e",
            "connectivity_type": "public",
            "id": "nat-0c5388646af74aaa4",
            "network_interface_id": "eni-04dbf597f52010fb1",
            "private_ip": "10.0.4.140",
            "public_ip": "52.200.146.2",
            "subnet_id": "subnet-031e2e888ccb4ee72",
            "tags": {
              "Name": "snyk-demo-vpc-us-east-1a",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "shared"
            },
            "tags_all": {
              "Name": "snyk-demo-vpc-us-east-1a",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "shared"
            }
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_eip.nat",
            "module.includes.module.vpc.aws_internet_gateway.this",
            "module.includes.module.vpc.aws_subnet.public",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.includes.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e9be1dec5575dafb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c5388646af74aaa4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e9be1dec5575dafb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_eip.nat",
            "module.includes.module.vpc.aws_internet_gateway.this",
            "module.includes.module.vpc.aws_nat_gateway.this",
            "module.includes.module.vpc.aws_route_table.private",
            "module.includes.module.vpc.aws_subnet.public",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.includes.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f46eb68e17887538",
            "id": "r-rtb-0ed90f58925cb59a41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ed90f58925cb59a4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.vpc.aws_internet_gateway.this",
            "module.includes.module.vpc.aws_route_table.public",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.includes.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021770407384:route-table/rtb-0e9be1dec5575dafb",
            "id": "rtb-0e9be1dec5575dafb",
            "owner_id": "021770407384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "snyk-demo-vpc-private",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "shared"
            },
            "tags_all": {
              "Name": "snyk-demo-vpc-private",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5c7132a72c81218"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.includes.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021770407384:route-table/rtb-0ed90f58925cb59a4",
            "id": "rtb-0ed90f58925cb59a4",
            "owner_id": "021770407384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "snyk-demo-vpc-public",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "shared"
            },
            "tags_all": {
              "Name": "snyk-demo-vpc-public",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5c7132a72c81218"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.includes.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ddabd19c49be3c2",
            "route_table_id": "rtb-0e9be1dec5575dafb",
            "subnet_id": "subnet-01752e214173f9d98"
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_route_table.private",
            "module.includes.module.vpc.aws_subnet.private",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8348dd5f5f0da2b",
            "route_table_id": "rtb-0e9be1dec5575dafb",
            "subnet_id": "subnet-0d709d18ddfd77f73"
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_route_table.private",
            "module.includes.module.vpc.aws_subnet.private",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03172df655fb5154f",
            "route_table_id": "rtb-0e9be1dec5575dafb",
            "subnet_id": "subnet-00885e34a0ac8e6fe"
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_route_table.private",
            "module.includes.module.vpc.aws_subnet.private",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.includes.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f7850cd6e0c2a8d",
            "route_table_id": "rtb-0ed90f58925cb59a4",
            "subnet_id": "subnet-031e2e888ccb4ee72"
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_route_table.public",
            "module.includes.module.vpc.aws_subnet.public",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb2634074e66024f",
            "route_table_id": "rtb-0ed90f58925cb59a4",
            "subnet_id": "subnet-0eaa634e487d7a204"
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_route_table.public",
            "module.includes.module.vpc.aws_subnet.public",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6e3a141f195ad31",
            "route_table_id": "rtb-0ed90f58925cb59a4",
            "subnet_id": "subnet-08d9ca501d82704ca"
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_route_table.public",
            "module.includes.module.vpc.aws_subnet.public",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.includes.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021770407384:subnet/subnet-01752e214173f9d98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01752e214173f9d98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021770407384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "snyk-demo-vpc-private-us-east-1a",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "snyk-demo-vpc-private-us-east-1a",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e5c7132a72c81218"
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021770407384:subnet/subnet-0d709d18ddfd77f73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d709d18ddfd77f73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021770407384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "snyk-demo-vpc-private-us-east-1b",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "snyk-demo-vpc-private-us-east-1b",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e5c7132a72c81218"
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021770407384:subnet/subnet-00885e34a0ac8e6fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00885e34a0ac8e6fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021770407384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "snyk-demo-vpc-private-us-east-1c",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "snyk-demo-vpc-private-us-east-1c",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e5c7132a72c81218"
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.includes.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021770407384:subnet/subnet-031e2e888ccb4ee72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031e2e888ccb4ee72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021770407384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "snyk-demo-vpc-public-us-east-1a",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "snyk-demo-vpc-public-us-east-1a",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e5c7132a72c81218"
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021770407384:subnet/subnet-0eaa634e487d7a204",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eaa634e487d7a204",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021770407384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "snyk-demo-vpc-public-us-east-1b",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "snyk-demo-vpc-public-us-east-1b",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e5c7132a72c81218"
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021770407384:subnet/subnet-08d9ca501d82704ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d9ca501d82704ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021770407384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "snyk-demo-vpc-public-us-east-1c",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "snyk-demo-vpc-public-us-east-1c",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e5c7132a72c81218"
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.includes.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021770407384:vpc/vpc-0e5c7132a72c81218",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c4b07921c728ca01",
            "default_route_table_id": "rtb-0b00d8cc0949b0422",
            "default_security_group_id": "sg-0e1f03816201e1821",
            "dhcp_options_id": "dopt-eae0de91",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e5c7132a72c81218",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b00d8cc0949b0422",
            "owner_id": "021770407384",
            "tags": {
              "Name": "snyk-demo-vpc",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "shared"
            },
            "tags_all": {
              "Name": "snyk-demo-vpc",
              "kubernetes.io/cluster/snyk-demo-eks-2ec99KG6": "shared"
            }
          },
          "dependencies": [
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021770407384:security-group/sg-0557412e84e0e5d42",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0557412e84e0e5d42",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management2023021617261973890000000c",
            "name_prefix": "all_worker_management",
            "owner_id": "021770407384",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e5c7132a72c81218"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "snyk_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021770407384:security-group/sg-0549e64c88f116308",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0549e64c88f116308",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "snyk_demo_rds_sg",
            "name_prefix": "",
            "owner_id": "021770407384",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "snyk_demo_rds_sg"
            },
            "tags_all": {
              "Name": "snyk_demo_rds_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5c7132a72c81218"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021770407384:security-group/sg-03e27db091c3ce3c0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-03e27db091c3ce3c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one2023021617261997370000000d",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "021770407384",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e5c7132a72c81218"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021770407384:security-group/sg-0b1759581bac3ee6e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b1759581bac3ee6e",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two2023021617261965790000000b",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "021770407384",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e5c7132a72c81218"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021770407384:subnet/subnet-07d78844d6f3d1778",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d78844d6f3d1778",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021770407384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Main"
            },
            "tags_all": {
              "Name": "Main"
            },
            "vpc_id": "vpc-0e5c7132a72c81218"
          },
          "dependencies": [
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021770407384:subnet/subnet-082f33025d73784cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082f33025d73784cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021770407384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Main"
            },
            "tags_all": {
              "Name": "Main"
            },
            "vpc_id": "vpc-0e5c7132a72c81218"
          },
          "dependencies": [
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    }
  ]
}